<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="titulo">Titulo</string>
    <string name="btn_enviar">Enviar</string>
    <string name="nombre">Nombre</string>
    <string name="digite_su_nombre">Digite su nombre</string>
    <string name="genero">Genero</string>
</resources>
