<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="32dp"
    tools:context=".RelativeLayoutActivity">

    <ImageView
        android:layout_centerHorizontal="true"
        android:id="@+id/iv_Login"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_launcher_background"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_below="@+id/iv_Login"
        android:id="@+id/et_Usuario"
        android:hint="@string/usuario"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_below="@id/et_Usuario"
        android:id="@+id/et_PassWord"
        android:inputType="textPassword"
        android:maxLength="6"
        android:hint="@string/contrasena"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_below="@id/et_PassWord"
        android:id="@+id/bt_Ingresar"
        android:background="@color/colorbutton"
        android:textColor="@color/colorwhite"
        android:text="@string/ingresar"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>