<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".RelativeVsLinearActivity">
    <RelativeLayout
        android:layout_weight="0.5"
        android:layout_height="0dp"
        android:layout_width="match_parent">

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:id="@+id/lv_Nombre"
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:id="@+id/et_Nombre"
            android:layout_below="@id/lv_Nombre"
            android:hint="@string/digite_su_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:id="@+id/tv_Genero"
            android:layout_below="@id/et_Nombre"
            android:text="@string/genero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:layout_alignBaseline="@id/tv_Genero"
            android:layout_alignParentEnd="true"
            android:id="@+id/cb_Genero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_PassWord"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:hint="@string/digite_su_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/genero"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>